tests/init_state/ref_obligations/overwrite_bound_ref_with_unfulfilled_obligation.err.expected
error: at 7:5: [INIT-RefObligationUnfulfilled] In function 'f', block 'entry': reference 'r' has unfulfilled obligation: pointee is uninitialized, but must be initialized before the reference expires
   |
 7 |     r = &mut z;
   |     ^^^^^^^^^^
  = note: reference declared here
   |
 3 | fn f(r: &mut i64, z: i64) {
   |      ^^^^^^^^^^^
